--- a/src/Components/HomePage/HomePage.css
+++ b/src/Components/HomePage/HomePage.css
@@ -4,6 +4,23 @@
     overflow: hidden;
 }
 
+.alert {
+    position: fixed;
+    width: 200px;
+    text-align: center;
+    top: 32%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #323232;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: opacity 0.3s ease-in-out;
+    z-index: 9;
+}
+
 .header {
     position: fixed;
     width: 100%;
@@ -190,7 +207,7 @@
     border: 3px solid rgba(41, 170, 225, 1);
 }
 
-.actions :last-child {
+.Copy-btn {
     width: 140px;
     height: 42px;
     border: 3px solid rgba(53, 216, 36, 1);
@@ -201,7 +218,7 @@
     background-color: black;
 }
 
-.actions :last-child:hover {
+.Copy-btn:hover {
     background-color: rgba(53, 216, 36, 1);
     color: black;
 }
@@ -847,7 +864,7 @@
     }
 
     .actions :nth-child(4) {
-         width: 120px;
+        width: 120px;
         height: 40px;
         font-size: 15px;
     }
@@ -911,6 +928,7 @@
         max-width: 320px;
         bottom: -10%;
     }
+
     .odindiv {
         height: 800px;
         top: 0px;
@@ -937,10 +955,12 @@
         gap: 3rem;
         top: -150px;
     }
+
     .odindiv {
         height: 800px;
         top: 100px;
     }
+
     .title {
         top: -40%;
         font-size: 60px;
@@ -1001,76 +1021,78 @@
         height: 70px;
         background: transparent;
     }
-    
+
     .textAdd :first-child {
         font-size: 30px;
     }
-    
+
     .textAdd :last-child {
         font-size: 30px;
     }
 }
-    
-    @media (min-width: 1620px) and (max-width: 1966px) {
-        .header {
-            gap: 4rem;
-            height: 100px;
-        }
-    
-        .header button {
-            font-size: 30px;
-    
-        }
-    
-        .header img {
-            width: 5%;
-        }
-    
-        .bodycontrol {
-            top: -200px;
-        }
-    
-        .title {
-            top: -25px;
-            font-size: 50px;
-        }
-    
-        .body span {
-            top: -50px;
-            width: 37%;
-            font-size: 28px;
-            line-height: 33.04px;
-            background-color: transparent;
-        }
-    
-        .social-links {
-            top: -50px;
-        }
-    
-        .textAdd {
-            top: -47px;
-        }
-    
-        .actions {
-            top: -50px;
-            width: 50%;
-        }
-    
-        .odin {
-            width: 400px;
-            bottom: -10%;
-        }
-        .odindiv {
-            height: 800px;
-            top: 100px;
-        }
-        .textAdd {
-            top: -70px;
-        }
-    
-    } 
 
-@media (min-width: 1921px)  {
+@media (min-width: 1620px) and (max-width: 1966px) {
+    .header {
+        gap: 4rem;
+        height: 100px;
+    }
+
+    .header button {
+        font-size: 30px;
+
+    }
+
+    .header img {
+        width: 5%;
+    }
+
+    .bodycontrol {
+        top: -200px;
+    }
+
+    .title {
+        top: -25px;
+        font-size: 50px;
+    }
+
+    .body span {
+        top: -50px;
+        width: 37%;
+        font-size: 28px;
+        line-height: 33.04px;
+        background-color: transparent;
+    }
+
+    .social-links {
+        top: -50px;
+    }
+
+    .textAdd {
+        top: -47px;
+    }
+
+    .actions {
+        top: -50px;
+        width: 50%;
+    }
+
+    .odin {
+        width: 400px;
+        bottom: -10%;
+    }
+
+    .odindiv {
+        height: 800px;
+        top: 100px;
+    }
+
+    .textAdd {
+        top: -70px;
+    }
+
+}
+
+@media (min-width: 1921px) {
     .header {
         gap: 10rem;
         height: 150px;
@@ -1146,6 +1168,7 @@
         width: 500px;
         bottom: -10%;
     }
+
     .odindiv {
         height: 800px;
         top: 100px;
