--- a/src/Components/FaqPage/faqPage.css
+++ b/src/Components/FaqPage/faqPage.css
@@ -29,9 +29,11 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 0rem;
-    justify-items: center;
-    align-items: stretch;
+    justify-items: start;
+    align-items: start;
     width: 100%;
+    text-align: start;
+
 }
 
 
@@ -39,11 +41,12 @@
 .faq-item {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    justify-items: start;
+    align-items: start;
     padding: 1rem;
     border-radius: 8px;
-    text-align: center;
+    text-align: start;
+
 }
 
 .faq-item-title {
@@ -124,14 +127,11 @@
     .faq-item-text {
         font-size: 15px;
         line-height: 25px;
-        text-align: center;
-        margin-left: 10%;
-
     }
 
     .faq-item-title {
         font-size: 20px;
-        text-align: center;
+        text-align: start;
     }
 
     .faq-title {
@@ -178,6 +178,11 @@
         z-index: 6;
 
     }
+
+    .faq-item {
+        padding-left: 50px;
+
+    }
 }
 
 @media (max-width: 480px) {
@@ -198,21 +203,24 @@
     .faq-item-text {
         font-size: 9px;
         line-height: 10px;
-        text-align: center;
-        margin-left: 10%;
 
     }
 
     .faq-item-title {
         width: 100%;
         font-size: 9px;
-        text-align: center;
+        text-align: start;
     }
 
     .faq-title {
         font-size: 40px;
         -webkit-text-stroke: 1px rgba(53, 216, 36, 1);
         z-index: 6;
+
+    }
+
+    .faq-item {
+        padding-left: 50px;
 
     }
 
@@ -227,13 +235,13 @@
     .faq-item-text {
         font-size: 9px;
         line-height: 15px;
-        text-align: center;
+        text-align: start;
     }
 
     .faq-item-title {
         font-size: 9px;
         line-height: 15px;
-        text-align: center;
+        text-align: start;
     }
 }
 
@@ -241,6 +249,11 @@
 
     .social-text {
         font-size: 15px;
+    }
+
+    .faq-item {
+        padding-left: 100px;
+
     }
 
     .social-icons img {
@@ -276,6 +289,11 @@
     .social-icons img {
         width: 50px;
         height: 50px;
+    }
+
+    .faq-item {
+        padding-left: 100px;
+
     }
 
     .faq-item-text {
@@ -314,6 +332,10 @@
         line-height: 30px;
 
     }
+    .faq-item {
+        padding-left: 200px;
+
+    }
 
     .faq-item-title {
         font-size: 35px;
@@ -348,6 +370,7 @@
 
     .faq-item-title {
         font-size: 40px;
+
     }
 
     .faq-title {
@@ -357,4 +380,9 @@
         font-weight: 500;
 
     }
+    .faq-item {
+        padding-left: 20%;
+
+    }
+
 }
